# avendesora

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  avendesora.cpp  avendesora.h  main.cpp
src/app/platform/: platform.h
src/app/platform/linux/: input.cpp  input.h  platform.cpp  platform.h  window.cpp  window.h
src/system/: CMakeLists.txt
